allow pre tag word wrap to prevent horizontal overflow

--- a/public/css/error.css
+++ b/public/css/error.css
@@ -5,3 +5,8 @@
     margin: 8px;
     width: 60%;
 }
+
+pre {
+    white-space: pre-line;
+    word-break: keep-all
+}
